fix(sass): realign footer text

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -837,6 +837,8 @@ a.zola-anchor {
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: auto;
   line-height: 1.1rem;
   bottom: 0;
 }
